src/test/resources/testinput/parsable/symtab/invalid_coco/let1.ocl
/* (c) https://github.com/MontiCore/monticore */
ocl let1 {
  context Auction a inv Time1:
    let
      min = a.startTime.lessThan(a.closingTime) ? a.startTime : a.closingTime
    in
      min == a.startTime;
}
